--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
           <ul></ul>
         </div>
       </div>
-      <script src = "tetris.js"></script>
+      <script src = "tetris.js" type="module"></script>
   </body>
 </html>
